--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@reduxjs/toolkit": "^1.2.5",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.1",
@@ -18,6 +21,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
+    "react-select": "^3.0.8",
     "redux": "^4.0.5",
     "styled-components": "^5.0.1"
   },
