--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-react-hooks": "^2.3.0",
     "moment": "^2.24.0",
     "react": "^16.12.0",
+    "react-burger-menu": "^2.6.13",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
